# RustLangES-API

./: .gitignore  Cargo.toml  Secrets.dev.toml  Secrets.toml  Shuttle.toml  docker-compose.yml
.github/workflows/: cd.yml
.sqlx/: query-1f6113411819c9f4ca91f160dc6f4e69e973d345c41abde7178c24d5b46fb66b.json  query-23b8a7219778bab3232d59f81aff6433de0e92a1e297b4b5c673fbe3eb030953.json  query-331d7b34f722c34785ad9c8519fe5c0046708c06af6f821c9f463331f084fd68.json  query-37bbf41143f437a1f92b0edaee2c8f780e6566660e0de23cb5d2392c5eb7a94d.json  query-3e778d680cadfe22f70845aa3b23616b7f8cd26bfac7c7ce2449b5a94a35aeec.json  query-3fa8cbd14823d1f916ded9ff23e323caa4a2ce19b34d7ffd46239c5f763b438b.json  query-5a74c0ae6911f16c7190160fa30ffacc5e15b1d55bff8abe1eff220348f65887.json  query-930561e260a59e89878d8dd7acc981210a2ab41a6e9e12d534fce8bdbbcb63ef.json  query-a06d7500f15965b3b9327df3d12e072342610b172be6dd7d3abf31d17f4112da.json  query-a52a445209635bae2eaa083c814c563759205238898392966a364c00e3b334ec.json  query-ab04a5af3ef0d2741eb83726cec4d1041b906e51583d6fc1af93fee9650a29cd.json  query-c572016eb7fce0072ac05691ee56cbee141747957c29a5d8a3326b96b923c67d.json  query-c916a4dbc2b0755e4a30415b27eb9956b6dd47ca1ba2b8cc01ef9c8f08628593.json  query-d3f7b3b1cdd18f2cecf9f8528bbe18a41e742d3353425fe43fa91b7dc1cfa6a4.json  query-ed4b7732329d4debde3f42b0b19d598bff9488eedd558ec589fff339d7686f3e.json
migrations/: 20231104201551_AddTrackTable.down.sql  20231104201551_AddTrackTable.up.sql  20231118181051_AddUserTable.down.sql  20231118181051_AddUserTable.up.sql  20240225235933_addSurveyTables.down.sql  20240225235933_addSurveyTables.up.sql
src/: errors.rs  main.rs
src/controllers/: answer.rs  auth.rs  health_check.rs  mod.rs  survey.rs  track.rs  vote.rs
src/middleware/: authenticator.rs  mod.rs
src/models/: mod.rs  question_file.rs  session_data.rs
src/models/adapters/: mod.rs
src/models/discord/: user_data.rs
src/models/dtos/: answer.rs  answer_comment.rs  (+4 more)
src/services/: answer_comments_service.rs  answer_service.rs  discord_service.rs  mod.rs  question_service.rs  survey_service.rs  track_service.rs  user_service.rs  vote_service.rs
src/utils/: mod.rs
survey_questions/2024/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  4.json  5.json  6.json  7.json  8.json  9.json
(+26 files in other folders)
