[package]
name = "rust-lang-en-espanol-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-session = "3.0.0"
axum = "0.6.20"
axum-macros = "0.4.0"
mod_use = "0.2.1"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
shuttle-secrets = "0.34.1"
shuttle-shared-db = { version = "0.34.1", features = ["postgres-rustls", "sqlx"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "tls-rustls", "uuid"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
validator = "0.16.1"
