[package]
name = "rust-lang-en-espanol-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-session = "3.0.0"
axum = "0.6.20"
axum-macros = "0.4.0"
mod_use = "0.2.1"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.0"
shuttle-shared-db = { version = "0.35.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "tls-rustls", "uuid"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.40"
validator = { version = "0.16.1", features = ["derive"] }
